# ros2_IRO

install/custom_interfaces/share/custom_interfaces/: package.sh
install/turtle_mover/lib/turtle_mover/: alphabet_publisher  go_to_cross  mover  position_publisher  turn_client  turn_service
install/turtle_mover/share/turtle_mover/: package.dsv  package.ps1  package.sh  package.xml
install/turtle_mover/share/turtle_mover/msg/: CarStatus.msg
turtle_mover/: colcon_command_prefix_setup_py.sh  colcon_command_prefix_setup_py.sh.env
turtle_mover/prefix_override/: sitecustomize.py
turtle_mover/share/turtle_mover/hook/: pythonpath_develop.dsv  pythonpath_develop.ps1  pythonpath_develop.sh
turtle_mover/turtle_mover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
